deploy: eb754f7150eb8b6125ee4baf3a987c48a7bbebc1

--- a/_static/basic.css
+++ b/_static/basic.css
@@ -757,6 +757,7 @@ span.pre {
     -ms-hyphens: none;
     -webkit-hyphens: none;
     hyphens: none;
+    white-space: nowrap;
 }
 
 div[class*="highlight-"] {
